--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,11 @@
 <div class="main">
   <img class="logo" src="./img/logo.jpg">
   <div class="nav">
+    <div class="logobox">
     <img class="logonav" src="./img/logo.jpg">
+    </div>
+    <div class="objnav"></div>
+    <div class="objnav"></div>
     <div class="objnav"></div>
   </div>
 </div>
