--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,6 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <script src="test.js"></script>
-<div class="main">
   <img class="logo" src="./img/logo.jpg">
   <div class="nav">
     <div class="logobox">
@@ -21,6 +20,11 @@
     <div class="objnav"></div>
     <div class="objnav"></div>
   </div>
-</div>
+  <div class="mainobj">
+  	<div class="oimg">
+  	    <img src="./img/book.png" class="logoobj">
+  	</div>
+  	<p class="txtmain">Ознакомиться с произведениями других писателей.</p>
+  </div>
   </body>
 </html>
